# transcribe-multilingual

./: .gitignore  README.md  pyproject.toml
.history/deploy/cloudflare/: tsconfig_20260222023756.json
.history/deploy/cloudflare/src/: index_20260222022153.ts  index_20260222022217.ts
apps/api/app/: api.py  config.py  crypto.py  db.py  dependencies.py  jobs.py  main.py  providers.py  queueing.py  storage.py  ui.py
apps/api/app/templates/: base.html  job_detail.html  job_new.html  jobs.html  settings.html
apps/worker/: run_worker.py  tasks.py
deploy/cloudflare/: README.md  package-lock.json  package.json  schema.sql  tsconfig.json  wrangler.toml
deploy/cloudflare/src/: index.test.ts  index.ts
deploy/local/: README.md
tests/e2e/: test_local_end_to_end.py
tests/integration/: test_local_api_and_jobs.py
tests/unit/: test_artifacts.py  test_capabilities.py  test_crypto.py  test_formatters.py  test_translation.py
