[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcribe-multilingual"
version = "0.1.0"
description = "Multilingual transcription and translation app with multiple providers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "cryptography>=42.0.0",
  "requests>=2.32.0",
  "redis>=5.0.0",
  "rq>=1.16.2",
  "jinja2>=3.1.4",
]

[project.optional-dependencies]
local-whisper = [
  "faster-whisper>=1.1.0",
]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["apps/api", "packages/core"]

[tool.pytest.ini_options]
pythonpath = ["apps/api", "packages/core"]
testpaths = ["tests"]

